--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -3,8 +3,8 @@
   <div class="subHeader">
     <h2>My Profile</h2>
     <div class="buttonContainer">
-      <button (click)="toggleModal()">Edit Account Info</button>
-      <button (click)="handleDeleteAccount()">Delete my account</button>
+      <button (click)="toggleModal()">Edit</button>
+      <button (click)="handleDeleteAccount()">Delete</button>
     </div>
   </div>
 
