Fix stylist profile edit and update view

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-
+<!-- EDIT MODAL -->
 <div class="modalWrapper" [style.display]="getStyle()">
   <div class="bigWrapper">
     <div class="miniWrapper">
