--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.css
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.css
@@ -1,23 +1,17 @@
-
 .componentWrapper {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-}
-h1 {
-  padding-bottom: 4rem;
+  height: 100%;
 }
 
-.rowBody {
-  display: flex;
-  flex-direction: row;
+h1 {
+  padding-bottom: 4rem;
 }
 
 .title {
   display: flex;
   justify-content: center;
-
   width: 100%;
   align-items: center;
 }
