Commit before merge

--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
@@ -31,7 +31,7 @@ h2 {
   display: flex;
   justify-content: center;
   border-bottom: black;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   height: 15%;
 }
 
