Add styling to the stylist landing page that is similar to the customer landing page

--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -73,11 +73,12 @@
   <div *ngIf="profile.type===0">
     <button [routerLink]="['/stylisthome']">View Map</button>
 
-    <h2>Confirmed</h2>
-    <div
-      *ngFor="let confirmedBooking of profile.confirmedBookings; let i = index"
-      class="booking-confirmed"
-    >
+    <div class="confirmedContainer">
+      <h2>Confirmed</h2>
+      <div
+        *ngFor="let confirmedBooking of profile.confirmedBookings; let i = index"
+        class="booking-confirmed"
+      >
       <booking
         [name]="confirmedBooking.name"
         [image_url]="confirmedBooking.image_url"
@@ -86,41 +87,44 @@
         [location]="confirmedBooking.location"
       >
       </booking>
-      <button (click)="completeBooking(confirmedBooking.id, i)">Get paid!</button>
       <button (click)="cancelBooking(confirmedBooking.id, i)">Cancel</button>
+      <button (click)="completeBooking(confirmedBooking.id, i)">Get paid!</button>
     </div>
 
-    <h2>Awaiting Payment</h2>
-    <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
-      <booking
-        [name]="dueBooking.name"
-        [image_url]="dueBooking.image_url"
-        [time]="dueBooking.time"
-        [phoneNumber]="dueBooking.phonenumber"
-        [location]="dueBooking.location"
-      >
-      </booking>
-      <button (click)="cancelPayment(dueBooking.id, i)">Cancel</button>
+    <div class="awaitingContainer">
+      <h2>Awaiting Payment</h2>
+      <div *ngFor="let dueBooking of profile.dueBookings; let i = index">
+        <booking
+          [name]="dueBooking.name"
+          [image_url]="dueBooking.image_url"
+          [time]="dueBooking.time"
+          [phoneNumber]="dueBooking.phonenumber"
+          [location]="dueBooking.location"
+        >
+        </booking>
+        <button (click)="cancelPayment(dueBooking.id, i)">Cancel</button>
+      </div>
     </div>
 
-    <h2>Pending</h2>
-    <div
-      *ngFor="let pendingBooking of profile.pendingBookings; let i = index"
-      class="booking-confirmed"
-    >
-      <booking
-        [name]="pendingBooking.name"
-        [image_url]="pendingBooking.image_url"
-        [time]="pendingBooking.time"
-        [phoneNumber]="pendingBooking.phonenumber"
-        [location]="pendingBooking.location"
+    <div class="pendingContainer">
+      <h2>Pending</h2>
+      <div
+        *ngFor="let pendingBooking of profile.pendingBookings; let i = index"
+        class="booking-confirmed"
       >
-      </booking>
-<!--       <button (click)="acceptBooking(pendingBooking.id, i)">Accept</button>
-      <button (click)="declineBooking(pendingBooking.id, i)">Decline</button> -->
+        <booking
+          [name]="pendingBooking.name"
+          [image_url]="pendingBooking.image_url"
+          [time]="pendingBooking.time"
+          [phoneNumber]="pendingBooking.phonenumber"
+          [location]="pendingBooking.location"
+        >
+        </booking>
+  <!--       <button (click)="acceptBooking(pendingBooking.id, i)">Accept</button>
+        <button (click)="declineBooking(pendingBooking.id, i)">Decline</button> -->
+      </div>
     </div>
   </div>
-
 </div>
 
 
