--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -11,7 +11,7 @@
       </li>
       <li
         *ngIf="stateService.retrieveCustomer().type===0"
-        [routerLink]="['/home']">
+        [routerLink]="['/landing']">
         <h4>Appointments</h4>
       </li>
       <li [routerLink]="['/customerProfile']"><h4>Profile</h4></li>
