Add space between property for the modal header

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -114,3 +114,30 @@
   display: flex;
   flex-direction: column;
 }
+
+.modalHeader {
+  flex:1 1 100%;
+  height: 10%;
+  border: 2px solid red;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.formContainer {
+  flex:1 1 100%;
+  height: 70%;
+  border: 2px solid red;
+}
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+}
+
+/*.modalUsernamePassword {
+  display: flex;
+  border: 2px solid red;
+}
+
+.modalEmailWebsite*/
