--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -35,28 +35,41 @@
     <!-- <span (click)="toggleModal()">&times;</span> -->
 <div class="modalWrapper" [style.display]="getStyle()">
   <div class="miniWrapper">
+
     <div class="modalHeader">
       <h2>Edit Profile</h2>
       <div (click)="toggleModal()">&times;</div>
     </div>
-    <form class="modalContent" (ngSubmit)="handleSaveChanges(updateForm.value)" #updateForm="ngForm">
-      <h4>Username: {{profile.name}}</h4>
-        <input type="text" name="name" [(ngModel)]="name" />
-      <h4>Password: *********</h4>
-        <input type="password" [(ngModel)]="password" name="password" />
-      <h4>Email: {{profile.email}}</h4>
-        <input type="email" [(ngModel)]="email" name="email" />
-      <h4>Phone Number: {{profile.phonenumber}}</h4>
-        <input [(ngModel)]="phonenumber" name="phonenumber" />
-      <h4 *ngIf="profile.type===0">Personal Website: {{profile.site_url}}</h4>
-        <input *ngIf="profile.type===0" type="url" [(ngModel)]="site_url" name="site_url" />
-      <h4>Address: {{profile.billingaddress}}</h4>
-        <input type="text" [(ngModel)]="billingaddress" name="billingaddress" />
-      <h4>About Me</h4>
-        <textarea [(ngModel)]="aboutMe" name="aboutMe"></textarea>
-      <div>
-        <button type="submit">Save changes</button>
-      </div>
-    </form>
+
+    <div class="formContainer">
+      <form class="modalContent" (ngSubmit)="handleSaveChanges(updateForm.value)" #updateForm="ngForm">
+        <div class="modalUsernamePassword">
+          <h4>Username: {{profile.name}}</h4>
+            <input type="text" name="name" [(ngModel)]="name" />
+          <h4>Password: *********</h4>
+            <input type="password" [(ngModel)]="password" name="password" />
+        </div>
+        <div class="modalEmailWebsite">
+          <h4>Email: {{profile.email}}</h4>
+            <input type="email" [(ngModel)]="email" name="email" />
+          <h4>Address: {{profile.billingaddress}}</h4>
+            <input type="text" [(ngModel)]="billingaddress" name="billingaddress" />
+        </div>
+        <div class="modalPhoneNumber">
+          <h4>Phone Number: {{profile.phonenumber}}</h4>
+            <input [(ngModel)]="phonenumber" name="phonenumber" />
+        </div>
+        <div class="modalAboutMe">
+          <h4>About Me</h4>
+            <textarea [(ngModel)]="aboutMe" name="aboutMe"></textarea>
+        </div>
+        <div>
+          <button type="submit">Save changes</button>
+        </div>
+      </form>
+    </div>
+
   </div>
 </div>
+        <!-- <h4 *ngIf="profile.type===0">Personal Website: {{profile.site_url}}</h4>
+          <input *ngIf="profile.type===0" type="url" [(ngModel)]="site_url" name="site_url" /> -->
