Add nested flex items into the modal

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -133,11 +133,14 @@
 .modalContent {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-/*.modalUsernamePassword {
+.modalUsernamePassword {
   display: flex;
   border: 2px solid red;
 }
 
-.modalEmailWebsite*/
+.modalUsernamePassword input {
+  flex: 1 1 50%;
+}
