--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -58,7 +58,7 @@
   border-bottom: 1px solid black;
   flex: 1 1 50%;
   height: 50%;
-  width: 95%;
+  width: 90%;
   margin-bottom: 1em;
   margin-left: 1em;
 }
@@ -106,7 +106,8 @@
 
 /* Modal Content/Box */
 .miniWrapper {
-  background-color: #ffffff;
+  background-color: black;
+  color: white;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
@@ -127,7 +128,6 @@
 .formContainer {
   flex:1 1 100%;
   height: 70%;
-  border: 2px solid red;
 }
 
 .modalContent {
@@ -138,9 +138,17 @@
 
 .modalUsernamePassword {
   display: flex;
-  border: 2px solid red;
+  width: 100%;
+  flex: 1 1;
 }
 
-.modalUsernamePassword input {
-  flex: 1 1 50%;
+.modalUsernamePassword > * {
+  width: 100%;
 }
+
+.modalInput {
+  width: 90%;
+  background-color: white;
+  font: black;
+}
+
