--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -109,7 +109,7 @@
   background-color: black;
   color: white;
   margin: 15% auto;
-  padding: 20px;
+  padding: 2em;
   border: 1px solid #888;
   width: 80%;
   display: flex;
@@ -119,9 +119,9 @@
 .modalHeader {
   flex:1 1 100%;
   height: 10%;
-  border: 2px solid red;
   display: flex;
   justify-content: space-between;
+  color: #F9B71A;
 }
 
 
@@ -152,3 +152,26 @@
   font: black;
 }
 
+.modalAboutMe {
+  flex: 1 1 100%;
+  width: 100%;
+  display: flex;
+}
+
+.modalAboutMe > * {
+  width: 100%;
+}
+
+.modalTextArea {
+  width: 95%;
+}
+
+.btnContainer {
+  flex: 1 1;
+  align-self: flex-end;
+  background-color: #F9B71A;
+  color: white;
+  margin-right: 2em;
+  margin-top: 1em;
+  border-radius: 35px;
+}
