Have a conditional display for the ngstyles

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -5,8 +5,7 @@
   <div class="listContainer">
     <ul class="myList">
       <li [routerLink]="['/landing']"><h4>Appointments</h4></li>
-      <li *ngIf="stateService.retrieveCustomer().type===1" [routerLink]="['/customerProfile']"><h4>Profile</h4></li>
-      <li *ngIf="stateService.retrieveCustomer().type===0" [routerLink]="['/stylistProfile', stateService.retrieveCustomer().id]"><h4>Profile</h4></li>
+      <li [routerLink]="['/customerProfile']"><h4>Profile</h4></li>
       <li [routerLink]="['/messages']"><h4>Messages</h4></li>
       <li [routerLink]="['/login']"><h4>Log out</h4></li>
     </ul>
