--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -90,6 +90,14 @@
   background-color: #ffffff;
 }
 
+.servicesContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.servicesContainer > * {
+  flex: 1 1 25%;
+}
 
 .modalWrapper {
   display: none;
