--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -108,17 +108,19 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: #ffffff;
+  opacity: 75%;
+  background-color: rgba(0,0,0,0.2);
 }
 
 /* Modal Content/Box */
 .miniWrapper {
-  background-color: black;
+  background-color: #6F6F6F;
   color: white;
   margin: 15% auto;
   padding: 2em;
-  border: 1px solid #888;
+  border: 1px solid #979797;
+  border-radius: 6px;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -164,6 +166,11 @@
   flex: 1 1 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.modalStyles {
+  flex: 1 1 25%;
 }
 
 .modalAboutMe > * {
@@ -176,10 +183,12 @@
 
 .btnContainer {
   flex: 1 1;
+  width: 20%;
   align-self: flex-end;
   background-color: #F9B71A;
   color: white;
   margin-right: 2em;
   margin-top: 1em;
   border-radius: 35px;
+  text-align: center;
 }
