--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -79,10 +79,18 @@
             <h4>About Me</h4>
               <textarea class="modalTextArea" [(ngModel)]="aboutMe" name="aboutMe"></textarea>
           </div>
+          <div *ngIf="stateService.retrieveCustomer().type === 0">
+            <h4>Services</h4>
+            <div class="servicesContainer">
+              <div class="styleItems" *ngFor="let style of styles">
+                <h5><input type="checkbox"> {{ style.servicename }}</h5>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="btnContainer">
-          <button type="submit">Save changes</button>
+          <button type="submit">Save</button>
         </div>
       </form>
     </div>
