--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -108,12 +108,6 @@
 }
 
 .modalWrapper {
-  display: flex;
-  color: black;
-  justify-content: center;
-  align-items: center;
-  padding-top: 1em;
-  margin-top: 1em;
   display: none;
   position: fixed;
   z-index: 1;
@@ -122,23 +116,57 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(173, 216, 230, 0.9);
+  background-color: #ffffff;
+  opacity: 75%;
+  background-color: rgba(0,0,0,0.2);
+}
+
+.miniWrapper {
+  background-color: #6F6F6F;
+  color: white;
+  margin: 15% auto;
+  padding: 2em;
+  border: 1px solid #979797;
+  border-radius: 6px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid red;
+}
+
+.modalHeader {
+  flex:1 1 100%;
+  height: 10%;
+  display: flex;
+  justify-content: space-between;
+  color: #F9B71A;
 }
 
 .modalContent {
-  border: 2px solid black;
-  flex: 1 1;
-  width: 82%;
+  background-color: #6F6F6F;
+  color: white;
+  margin: 15% auto;
+  padding: 2em;
+  border: 1px solid #979797;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.formContainer {
+  border: 2px solid red;
+  flex: 1 1 90%;
   height: 80%;
-  padding: 5ch;
-  margin: 5ch;
-  margin-left: 12ch;
-  position: absolute;
-  /*margin-left: -35%;
-  margin-top: -35%;*/
-  /*top: 50%;
-  left: 50%;*/
-  background-color: white;
+}
+
+.textAreaContainer {
+  flex: 1 1 100%;
+}
+
+.btnContainer {
+  flex: 1 1 100%;
 }
 
 .modeitem {
