--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -131,7 +131,6 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  border: 2px solid red;
 }
 
 .modalHeader {
@@ -140,14 +139,12 @@
   display: flex;
   justify-content: space-between;
   color: #F9B71A;
-  border: 2px solid red;
   margin-bottom: 1em;
 }
 
 .formContainer {
   flex: 1 1 100%;
   height: 90%;
-  border: 2px solid red;
 }
 
 textarea {
@@ -159,4 +156,13 @@ textarea {
   display: flex;
   width: 100%;
   justify-content: flex-end;
+}
+
+.btnContainer button {
+  width: 20%;
+  background-color: #F9B71A;
+  color: white;
+  margin-right: 1em;
+  margin-top: 1em;
+  border-radius: 35px;
 }
