Add state fetcher and logout state

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -30,7 +30,7 @@
         <span *ngIf="stateService.retrieveCustomer().type===1" [routerLink]="['/customerProfile']">Profile</span>
         <span *ngIf="stateService.retrieveCustomer().type===0" [routerLink]="['/stylistProfile', stateService.retrieveCustomer().id]">Profile</span>
         <span [routerLink]="['/messages']">Messages</span>
-        <span [routerLink]="['/login']">Log out</span>
+        <span (click)="handleLogout()">Log out</span>
       <!-- </ul> -->
     </nav>
 
