--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -162,7 +162,46 @@ textarea {
   width: 20%;
   background-color: #F9B71A;
   color: white;
-  margin-right: 1em;
+  margin-right: .5em;
   margin-top: 1em;
   border-radius: 35px;
+}
+
+.formContainer2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.modalContent {
+  display: flex;
+  border: 2px solid red;
+  flex-direction: column;
+}
+
+.topRow {
+  display: flex;
+  width: 100%;
+  height: 20%;
+}
+
+.topRow > * {
+  flex: 1 1;
+}
+
+.serviceContainer {
+  flex: 1 1 100%;
+  border: 2px solid red;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapContainer {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.wrapcontainer input {
+  flex: 1 1 25%;
 }
